@@ -1,11 +1,17 @@
 VERSION HISTORY
 ================
 
+v ???
+! debug: disabled the winapi window
++ extern/isaac - crypto-safe random number generator
+* axUtils: fixed a -fPIC / axCPUID issue
+* ladspa: added hints and override values for the parameters
+
 v0.1.1a - 290610
 * fixed some issue with 64bit builds
 * axRand: use simplistic axRand() by default, more complicated prngs are enabled
   with a flag.
-
+  
 v0.1.1 - 230610
 + ladspa: added support for ladspa (win32 & linux)
 + extern/mverb: added open source (gpl) reverb engine by martin eastwood
